ライブラリをwebから取得するよう変更

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="./design/common.css"/>
         <link rel="stylesheet" href="./design/mainView.css"/>
-        <script src="../lib/jquery/jquery-3.1.1.min.js"></script>
-        <script src="../lib/d3js/d3.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script>
             var img = null;
         </script>
