・画像のドラッグアンドドロップ機能を追加 ・魚眼レンズ加工機能を追加したけどまだ未完成

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div id="bottom_menu"></div>
         </div>
     </body>
+    <script src="./script/imageProcessor.js"></script>
     <script src="./script/imageEditor.js"></script>
     <script src="./script/eventListener.js"></script>
     <script src="./script/initialize.js"></script>
